--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,11 +14,17 @@
 body {
     font-family: 'Old Standard TT', 'Times New Roman', serif;
     background-color: #181511;
+    padding: 0;
+    margin: 0;
 
     a {
         text-decoration: none;
         color: inherit;
         @extend %transition;
+    }
+
+    section {
+        padding: 0;
     }
 } 
 
@@ -31,6 +37,13 @@ body {
         justify-content: space-around;
         padding: 33px 0;
     }
+
+    &--view {
+        padding-top: 120px;
+        text-align: center;
+    }
+
+
 }
 
 .logo {
@@ -40,25 +53,72 @@ body {
 
 .header {
     height: 80px;
-}
-
-.holder {
-    display: flex;
+    margin-bottom: 37px;
+    
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
+    
 
     &__link {
         text-transform: uppercase;
         color: #ACA592;
         font-size: 11px;
-        line-height: 86px;
+        line-height: 80px;
         margin: 0 13px;
     }
 
     &__link:hover {
         color: #FFAE2B;
+    }
+
+    &__button {
+        display: inline-block;
+        color: #FFAE2B;
+        padding: 20px 27px;
+        text-transform: uppercase;
+        // line-height: 80px;
+        width: 147px;
+        height: 57px;
+        font-size: 11px;
+        border: 1px solid #FFAE2B;
+    }
+
+    &__button:hover { 
+        color: #181511;
+        background-color: #FFAE2B;
+    }    
+}
+
+.view {
+    // background-repeat: no-repeat;
+    background-size: cover;
+    background: url("../img/hero1.jpg");
+
+    &__dest {
+        font-size: 12px;
+        color: #FFAE2B;
+        text-transform: uppercase;
+        margin-bottom: 30px;
+    }
+
+    &__title {
+        position: relative;
+        left: 200px;
+        font-size: 70px;
+        color: #fff;
+        max-width: 869px;
+        margin-bottom: 55px;
+    }
+
+    &__button {
+        width: 143px;
+        font-style: 'Old Standard TT';
+        padding: 14px;
+        border: #FFAE2B solid 1px;
+        background-color: #FFAE2B;
+        margin-bottom: 200px;
     }
 }
