--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,11 @@ body {
     section {
         padding: 0;
     }
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
 } 
 
 .container {
@@ -39,6 +44,11 @@ body {
     }
 
     &--view {
+        padding-top: 120px;
+        text-align: center;
+    }
+
+    &--landing {
         padding-top: 120px;
         text-align: center;
     }
@@ -93,9 +103,10 @@ body {
 }
 
 .view {
-    // background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 1440px, 602px;
     background: url("../img/hero1.jpg");
+    padding-bottom: 120px;
 
     &__dest {
         font-size: 12px;
@@ -115,10 +126,54 @@ body {
 
     &__button {
         width: 143px;
-        font-style: 'Old Standard TT';
-        padding: 14px;
+        padding:20px 28px;
+        font-size: 11px;
         border: #FFAE2B solid 1px;
         background-color: #FFAE2B;
         margin-bottom: 200px;
+    }
+}
+
+.landing {
+
+    &__dest {
+        font-size: 12px;
+        color: #ACA592;
+        text-transform: uppercase;
+        margin-bottom: 30px;
+    }
+
+    &__title {
+        font-size: 60px;
+        color: #FFAE2B;
+    }
+}
+
+.holder {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 120px;
+}
+
+.card {
+    margin: 10px;
+    flex-basis: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border:#4B4136 solid 1px;
+
+    &__photo {
+        width: 305px;
+        height: 190px;
+    }
+
+    &__title {
+        text-transform: uppercase;
+       font-size: 13px;
+       color: #fff; 
+       letter-spacing: 2px;
     }
 }
